--- a/index.html
+++ b/index.html
@@ -5,32 +5,11 @@
         <title>Bierzählomat</title>
     </head>
     <body>
-        <h1>Der Bierzählomat</h1>
-        <canvas id="canvasBeer05" width="100" height="200" style="border: 1px solid black"></canvas>
-        <img src="images/btnPlus.png" id="btnBeer05Plus" width="100" height="100">
-        <em id="counterBeer05" style="font-size: 100px">0</em>
-        <img src="images/btnMinus.png" id="btnBeer05Minus" width="100" height="100">
-
-        <p></p>
-
-        <canvas id="canvasBeer03" width="100" height="200" style="border: 1px solid black"></canvas>
-        <img src="images/btnPlus.png" id="btnBeer03Plus" width="100" height="100">
-        <em id="counterBeer03" style="font-size: 100px">0</em>
-        <img src="images/btnMinus.png" id="btnBeer03Minus" width="100" height="100">
-
-        <p></p>
-
-        <canvas id="canvasMix" width="100" height="200" style="border: 1px solid black"></canvas>
-        <img src="images/btnPlus.png" id="btnMixPlus" width="100" height="100">
-        <em id="counterMix" style="font-size: 100px">0</em>
-        <img src="images/btnMinus.png" id="btnMixMinus" width="100" height="100">
-        
-        <p></p>
-
-        <canvas id="canvasShot" width="100" height="200" style="border: 1px solid black"></canvas>
-        <img src="images/btnPlus.png" id="btnShotPlus" width="100" height="100">
-        <em id="counterShot" style="font-size: 100px">0</em>
-        <img src="images/btnMinus.png" id="btnShotMinus" width="100" height="100">
+        <canvas id="canvas" style="border: 1px solid black"></canvas>
+        <img src="images/btnMid.png" id="btnMid" width="200" height="200" style="position: fixed;" draggable="false">
+        <img src="images/btnPlus.png" id="btnPlus" width="100" height="100" style="position: fixed;" draggable="false">
+        <img src="images/btnMinus.png" id="btnMinus" width="100" height="100" style="position: fixed;" draggable="false">
+        <script src="scripts/layout.js"></script>
         <script src="scripts/main.js"></script>
     </body>
 </html> 
