--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <canvas id="canvas" style="border: 1px solid black" draggable="true"></canvas>
 
-        <img src="images/btnMid.png" id="mouseCircle" width="100" height="100" style="position: fixed;" draggable="false">
-        <h1 id="mouseX" style="position: fixed;">X:</h1>
-        <h1 id="mouseY" style="position: fixed;">Y:</h1>
+        <img src="images/btnMid.png" id="cursorCircle" width="100" height="100" style="position: fixed;" draggable="false">
+        <h1 id="cursorX" style="position: fixed;">X:</h1>
+        <h1 id="cursorY" style="position: fixed;">Y:</h1>
         
         <img src="images/btnMid.png" id="btnMid" width="200" height="200" style="position: fixed;" draggable="false">
         <img src="images/btnPlus.png" id="btnPlus" width="100" height="100" style="position: fixed;" draggable="false">
