--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <body>
         <canvas id="canvas" style="border: 1px solid black" draggable="true"></canvas>
 
+        <!--
         <img src="images/btnMid.png" id="cursorCircle" width="100" height="100" style="position: fixed;" draggable="false">
         <h1 id="cursorX" style="position: fixed;">X:</h1>
         <h1 id="cursorY" style="position: fixed;">Y:</h1>
-        
-        <img src="images/btnMid.png" id="btnMid" width="200" height="200" style="position: fixed;" draggable="false">
-        <img src="images/btnPlus.png" id="btnPlus" width="100" height="100" style="position: fixed;" draggable="false">
-        <img src="images/btnMinus.png" id="btnMinus" width="100" height="100" style="position: fixed;" draggable="false">
+        -->
+        <div id="btneering">
+            <div id="btnMidOut" style="position: fixed; visibility: hidden;">
+                <img src="images/btnMidOutPiece.png" id="btnMidNE" width="30" height="45" style="position: fixed; visibility: inherit;" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidSE" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleY(-1);" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidSW" width="30" height="45" style="position: fixed; visibility: inherit; transform: rotate(180deg);" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidNW" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleX(-1);" draggable="false">
+            </div>
+            <img src="images/btnMid.png" id="btnMid" width="50" height="50" style="position: fixed;" draggable="false">
+            <img src="images/btnPlus.png" id="btnPlus" width="25" height="25" style="position: absolute;" draggable="false">
+            <img src="images/btnMinus.png" id="btnMinus" width="25" height="25" style="position: absolute;" draggable="false">
+        </div>
         <script src="scripts/layout.js"></script>
         <script src="scripts/main.js"></script>
     </body>
