--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h1 id="cursorX" style="position: fixed;">X:</h1>
         <h1 id="cursorY" style="position: fixed;">Y:</h1>
         -->
+        <div id="texteering">
+
+        </div>
         <div id="btneering">
             <div id="btnMidOut" style="position: fixed; visibility: hidden;">
                 <img src="images/btnMidOutPiece.png" id="btnMidNE" width="30" height="45" style="position: fixed; visibility: inherit;" draggable="false">
@@ -20,8 +23,8 @@
                 <img src="images/btnMidOutPiece.png" id="btnMidNW" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleX(-1);" draggable="false">
             </div>
             <img src="images/btnMid.png" id="btnMid" width="50" height="50" style="position: fixed;" draggable="false">
-            <img src="images/btnPlus.png" id="btnPlus" width="25" height="25" style="position: absolute;" draggable="false">
             <img src="images/btnMinus.png" id="btnMinus" width="25" height="25" style="position: absolute;" draggable="false">
+            <img src="images/btnPlus.png" id="btnPlus" width="25" height="25" style="position: absolute;" draggable="false">
         </div>
         <script src="scripts/layout.js"></script>
         <script src="scripts/main.js"></script>
