--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h1 id="cursorY" style="position: fixed;">Y:</h1>
         -->
         <div id="texteering">
-
+            <h1 id="drinkTitle" style="text-align: center;"></h1>
+            <h1 id="drinkAmount" style="text-align: center;"></h1>
         </div>
         <div id="btneering">
             <div id="btnMidOut" style="position: fixed; visibility: hidden;">
@@ -26,6 +27,7 @@
             <img src="images/btnMinus.png" id="btnMinus" width="25" height="25" style="position: absolute;" draggable="false">
             <img src="images/btnPlus.png" id="btnPlus" width="25" height="25" style="position: absolute;" draggable="false">
         </div>
+        <script src="scripts/filehandler.js"></script>
         <script src="scripts/layout.js"></script>
         <script src="scripts/main.js"></script>
     </body>
