--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
     <head>
         <meta charset="utf-8">
         <title>Bierzählomat</title>
+        <link rel="icon" href="favicon.ico">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <canvas id="canvas" style="border: 1px solid black" draggable="true"></canvas>
 
-        <!--
-        <img src="images/btnMid.png" id="cursorCircle" width="100" height="100" style="position: fixed;" draggable="false">
-        <h1 id="cursorX" style="position: fixed;">X:</h1>
-        <h1 id="cursorY" style="position: fixed;">Y:</h1>
-        -->
-        <div id="texteering">
-            <h1 id="drinkTitle" style="text-align: center;"></h1>
-            <h1 id="drinkAmount" style="text-align: center;"></h1>
-            <h1 id="drinkAPC" style="text-align: center;"></h1>
+        <div id="textSet" style="text-align: center; font-size: 40px; font-family: 'comfortaa';">
+            <em id="drinkTitle" style="text-align: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></em>
+            <em id="drinkCounter" style="text-align: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></em>
+            <em id="drinkAPC" style="text-align: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></em>
         </div>
         <div id="btneering">
             <div id="btnMidOut" style="position: fixed; visibility: hidden;">
-                <img src="images/btnMidOutPiece.png" id="btnMidNE" width="30" height="45" style="position: fixed; visibility: inherit;" draggable="false">
-                <img src="images/btnMidOutPiece.png" id="btnMidSE" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleY(-1);" draggable="false">
-                <img src="images/btnMidOutPiece.png" id="btnMidSW" width="30" height="45" style="position: fixed; visibility: inherit; transform: rotate(180deg);" draggable="false">
-                <img src="images/btnMidOutPiece.png" id="btnMidNW" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleX(-1);" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidNE" width="30" height="45" style="position: fixed; visibility: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidSE" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleY(-1); user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidSW" width="30" height="45" style="position: fixed; visibility: inherit; transform: rotate(180deg); user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
+                <img src="images/btnMidOutPiece.png" id="btnMidNW" width="30" height="45" style="position: fixed; visibility: inherit; transform: scaleX(-1); user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
             </div>
-            <img src="images/btnMid.png" id="btnMid" width="50" height="50" style="position: fixed;" draggable="false">
-            <img src="images/btnMinus.png" id="btnMinus" width="25" height="25" style="position: absolute;" draggable="false">
-            <img src="images/btnPlus.png" id="btnPlus" width="25" height="25" style="position: absolute;" draggable="false">
+            <img src="images/btnMid.png" id="btnMid" width="50" height="50" style="position: fixed; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
+            <img src="images/btnMinus.png" id="btnMinus" width="25" height="25" style="position: absolute; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
+            <img src="images/btnPlus.png" id="btnPlus" width="25" height="25" style="position: absolute; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none" draggable="false">
         </div>
-        <script src="scripts/setup.js"></script>
         <script src="scripts/filehandler.js"></script>
+        <script src="scripts/setup.js"></script>
         <script src="scripts/layout.js"></script>
         <script src="scripts/main.js"></script>
     </body>
-</html> 
+</html>
+ 
