--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <canvas id="canvas" style="border: 1px solid black" draggable="true"></canvas>
 
-        <div id="textSet" style="text-align: center; font-size: 40px; font-family: 'comfortaa';">
-            <em id="drinkTitle" style="text-align: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></em>
-            <em id="drinkCounter" style="text-align: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></em>
-            <em id="drinkAPC" style="text-align: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></em>
+        <div id="textSet" style="text-align: center; position: fixed; font-size: 40px; font-family: 'comfortaa';">
+            <div id="drinkTitle" style="text-align: inherit; position: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></div>
+            <div id="drinkCounter" style="text-align: inherit; position: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></div>
+            <div id="drinkAPC" style="text-align: inherit; position: inherit; font-size: inherit; font-family: inherit; user-zoom: none; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; -o-user-select: none"></div>
         </div>
         <div id="btneering">
             <div id="btnMidOut" style="position: fixed; visibility: hidden;">
